# pradeep-backend

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat.py
app/core/: config.py
app/lib/: custom_ollama_provider.py  utils.py
app/services/: vector_store.py
data/: resume.md
scripts/: ingest.py  test_ollama_cloud.py  test_retrieval.py  test_stream.py
