[project]
name = "pradeep-backend"
version = "0.1.0"
description = "Zero-Cost RAG Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # "pinecone-client>=3.1.0",  <-- Uncomment in Phase 2
    # "groq>=0.4.2",             <-- Uncomment in Phase 2
    # "python-dotenv>=1.0.1"     <-- Uncomment in Phase 2
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
